bk_ida/gccida/c3/output_constructor
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5158:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5186:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5188:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *size_unit; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5210:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5212:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v60; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5213:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v61; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5214:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5215:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5216:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v64; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5217:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v65; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5228:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *t; // [rsp+30h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5284:25: error: expected expression
values = *( tree_node **)( high + 24); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5284:13: error: use of undeclared identifier 'tree_node'
values = *( tree_node **)( high + 24); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5346:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5364:49: error: use of undeclared identifier 'off_73AB98'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_73AB98 + 4, "\t.zero\t", ( unsigned int)v32); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5418:20: error: expected expression
v58 = ( tree_node *)v59; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5418:9: error: use of undeclared identifier 'tree_node'
v58 = ( tree_node *)v59; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5458:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/varasm.c:5473:49: error: use of undeclared identifier 'off_73AB98'
fprintf( ( FILE *)asm_out_file, ( const char *)&off_73AB98 + 4, "\t.zero\t", ( unsigned int)length); 
                                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constructor/src/obj/varasm.o] Error 1
